@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.b2international.snowowl</groupId>
 	<artifactId>snowowl-parent</artifactId>
-	<version>7.10.0</version>
+	<version>7.11.0</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -41,11 +41,20 @@
 		<tycho.version>1.7.0</tycho.version>
 		<tycho-extras.version>1.7.0</tycho-extras.version>
 		<xtend.compiler.version>2.21.0</xtend.compiler.version>
-		<jacoco.version>0.8.4</jacoco.version>
+		<jacoco.version>0.8.6</jacoco.version>
 		
 		<!-- Versioning -->
 		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 		<forceContextQualifier>${maven.build.timestamp}</forceContextQualifier>
+		
+		<!-- Testing -->
+		<testHeapSize>1g</testHeapSize>
+		<testArgLine>${tycho.testArgLine} -Xms${testHeapSize} -Xmx${testHeapSize} -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090 -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+AlwaysPreTouch -Dlogback.configurationFile=${basedir}/src/configuration/logback-maven.xml</testArgLine>
+
+		<!-- Deployment -->
+		<maven.repository.id>nexus_deployment</maven.repository.id>
+		<nexus.releases.url>${nexus.url}/content/repositories/releases</nexus.releases.url>
+		<nexus.snapshots.url>${nexus.url}/content/repositories/snapshots</nexus.snapshots.url>
 	</properties>
 
 	<modules>
@@ -535,7 +544,7 @@
 	   		<groupId>javax.activation</groupId>
 	    	<artifactId>javax.activation-api</artifactId>
 		    <version>${javax.activation.version}</version>
-		    <scope>provided</scope>
+		    <scope>provided</scope>	
 		</dependency>
 		<dependency>
 		    <groupId>com.sun.activation</groupId>
@@ -797,6 +806,14 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/b2international/snowowl/snomed/ecl/parser/**/*</exclude>
+						<exclude>com/b2international/snowowl/snomed/etl/parser/**/*</exclude>
+						<exclude>com/b2international/snowowl/snomed/ql/parser/**/*</exclude>
+						<exclude>com/b2international/snowowl/snomed/scg/parser/**/*</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
@@ -876,19 +893,19 @@
 
 	<distributionManagement>
 		<repository>
-			<id>artifactory-releases</id>
-			<url>https://artifactory.ops.babylontech.co.uk/artifactory/babylon-maven-releases</url>
+			<id>${maven.repository.id}</id>
+			<url>${nexus.releases.url}</url>
 		</repository>
 		<snapshotRepository>
-			<id>artifactory-snapshots</id>
-			<url>https://artifactory.ops.babylontech.co.uk/artifactory/babylon-maven-snapshots</url>
+			<id>${maven.repository.id}</id>
+			<url>${nexus.snapshots.url}</url>
 		</snapshotRepository>
 	</distributionManagement>
 
 	<scm>
-		<url>https://github.com/babylonhealth/snow-owl</url>
-		<connection>scm:git:ssh://github.com/babylonhealth/snow-owl.git</connection>
-		<developerConnection>scm:git:ssh@github.com:babylonhealth/snow-owl.git</developerConnection>
+		<url>https://github.com/b2ihealthcare/snow-owl</url>
+		<connection>scm:git:ssh://github.com/b2ihealthcare/snow-owl.git</connection>
+		<developerConnection>scm:git:ssh@github.com:b2ihealthcare/snow-owl.git</developerConnection>
 	</scm>
 	
 </project>
